# textCAD

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  PHASE_12_REVIEW.md  README.md  TEST_SUMMARY.md  flake.nix
.claude/agents/: phase-completion-reviewer.md  rust-z3-developer.md  test-developer.md
.github/workflows/: ci.yml
docs/: CLAUDE.md  IGNORED_TESTS.md  IMPLEMENTATION_PLAN.md  PHASE_12_TEST_REPORT.md
examples/: circle_demo.rs  line_demo.rs  phase10_demo.rs  phase5_demo.rs  phase6_demo.rs  phase8_demo.rs  point_demo.rs  svg_demo.rs
hooks/: install-hooks.sh  pre-commit
proptest-regressions/: solution.txt
proptest-regressions/constraints/: property_tests.txt
src/: constraint.rs  entity.rs  error.rs  expr.rs  lib.rs  sketch.rs  solution.rs  solver.rs  units.rs
src/constraints/: basic.rs  circle.rs  line.rs  mod.rs  parametric.rs  property_tests.rs
src/entities/: circle.rs  line.rs  mod.rs  point.rs
src/export/: mod.rs  svg.rs
tests/: circle_entity_factory.rs  circle_integration.rs  entity_factory_methods.rs  line_constraints_edge_cases.rs  line_constraints_integration.rs  line_constraints_regression.rs  parametric_constraints_edge_cases.rs  parametric_constraints_error_handling.rs  parametric_constraints_integration.rs  parametric_constraints_performance.rs  parametric_constraints_properties.rs  parametric_constraints_regression.rs  svg_export_tests.rs
