[package]
name = "textcad"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# Z3 with static-link-z3 DISABLED to use system Z3
z3 = { version = "0.12", default-features = false }
thiserror = "1.0"
generational-arena = "0.2"

[dev-dependencies]
proptest = "1.4"

[profile.dev]
opt-level = 1  # Faster dev builds with Z3
